Fix styling on mobile

--- a/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
+++ b/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
@@ -92,3 +92,10 @@
     width: auto;
   }
 }
+
+body .region-branding .block .views-exposed-form .views-exposed-widget .search-select-wrapper .dropdown-toggle {
+  padding: 0;
+  height: 30px;
+  margin: 0;
+  width: 20px;
+}
